--- a/src/components/ProductComponent.astro
+++ b/src/components/ProductComponent.astro
@@ -19,8 +19,8 @@ const structuredData = {
         "@type": "Organization",
         "name": "Dubai Hikvision"
       },
-      "width": "300px",
-      "height": "300px"
+      "width": 800,
+      "height": 800
     },
   ],
   "description": Array.isArray(product.data.features)
@@ -32,8 +32,8 @@ const structuredData = {
     "logo": {
       "@type": "ImageObject",
       "contentUrl": "https://dubai-hikvision.com/logo.svg",
-      "width": "300px",
-      "height": "60px"
+      "width": 300,
+      "height": 60
     }
   },
   "category": category.charAt(0).toUpperCase() + category.slice(1),
