--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -17,14 +17,23 @@ const structuredData = {
       "name": slider.data.sliderAlt,
       "image": {
         "@type": "ImageObject",
-        "height": "300",
-        "width": "300",
+        "url": "https://dubai-hikvision.com" + slider.data.slider,
+        "height": 800,
+        "width": 800,
         "caption": slider.data.sliderAlt
       },
+      "description": slider.data.description,
       "brand": {
         "@type": "Brand",
         "name": "Hikvision"
       },
+      "aggregateRating": slider.data.rating && slider.data.reviewCount ? {
+    "@type": "AggregateRating",
+    "ratingValue": slider.data.rating.toFixed(1),
+    "reviewCount": slider.data.reviewCount,
+    "bestRating": "5",
+    "worstRating": "1"
+  } : undefined,
       "category": "Security Products",
       "offers": {
         "@type": "Offer",
