--- a/src/components/SlugProductDetails.astro
+++ b/src/components/SlugProductDetails.astro
@@ -59,8 +59,8 @@ const productSchema = {
     "@type": "ImageObject",
     "url": `https://dubai-hikvision.com${img.src}`,
     "width": 800,
-    "height": 600,
-    "caption": `${img.alt} - ${title}`,
+    "height": 800,
+    "caption": ` ${title}`,
     "representativeOfPage": img.src === imgCard.src
   })),
   "offers": {
