--- a/src/pages/productsnew/index.astro
+++ b/src/pages/productsnew/index.astro
@@ -99,7 +99,7 @@ const structuredData = {
     "creditText": "Hikvision " + p.title,
     "creator": {
       "@type": "Organization",
-      "name": "Hikvision"
+      "name": "Dubai Hikvision"
     }
   })),
   "mainEntity": {
