--- a/src/components/ProductComponent.astro
+++ b/src/components/ProductComponent.astro
@@ -57,8 +57,8 @@ const structuredData = {
     "@type": "AggregateRating",
     "ratingValue": product.data.rating.toFixed(1),
     "reviewCount": product.data.reviewCount,
-    "bestRating": "5",
-    "worstRating": "1"
+    "bestRating": 5,
+    "worstRating": 1
   } : undefined,
   "breadcrumb": {
     "@type": "BreadcrumbList",
