Final- Production build

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -27,7 +27,7 @@ const structuredData = {
         "contactType": "sales",
         "telephone": "+971552929644",
         "email": "sales@lovosis.com",
-        "areaServed": ["UAE", "Dubai", "SA", "QA", "OM", "KW", "BH"],
+        "areaServed": ["AE", "Dubai", "SA", "QA", "OM", "KW", "BH"],
         "availableLanguage": ["English","Arabic"]
       },
       {
@@ -48,7 +48,7 @@ const structuredData = {
       "addressLocality": "Dubai",
       "addressRegion": "Dubai",
       "postalCode": "123421",
-      "addressCountry": "UAE"
+      "addressCountry": "AE"
     },
     "geo": {
       "@type": "GeoCoordinates",
