--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import FeatureComponents from "../components/FeatureComponents.astro";
 import DigiComponents from "../components/DigiComponents.astro";
 import FAQ from "../components/FAQ.astro";
 import Slider from "../components/Slider.astro";  
-const title =`Dubai Hikvision - Authorized Distributor`;
+const title =`Dubai Hikvision - Hikvision Wholesale Distributor`;
 const description = `Premier Hikvision distributor in Dubai, UAE. Explore our range of genuine products and benefit from expert support. Contact us for inquiries`
 ---
 
