--- a/src/pages/productsnew/index.astro
+++ b/src/pages/productsnew/index.astro
@@ -5,6 +5,7 @@ import nvrimg from "/src/assets/images/products/nvr.png";
 import ptzimg from "/src/assets/images/products/ptz.png";
 import explosionimg from "/src/assets/images/products/explosion.png";
 import banner1 from "/src/assets/images/banner/Productbanner.webp";
+import turboimg from "/src/assets/images/products/turbohd.png";
 import { SEO } from "astro-seo";
 
 // SEO metadata
@@ -83,6 +84,13 @@ const products = [
     description: "Explosion-proof cameras ensure safe surveillance in hazardous and high-risk environments.",
     image: explosionimg,
     link: "/explosionproof"
+  },
+  {
+    id: 7,
+    title: "TurboHD",
+    description: "TurboHD cameras offer high-quality video surveillance with fast response times.",
+    image: turboimg,
+    link: "/turbohd"
   }
 ];
 
