--- a/src/pages/productsnew/index.astro
+++ b/src/pages/productsnew/index.astro
@@ -6,6 +6,9 @@ import ptzimg from "/src/assets/images/products/ptz.png";
 import explosionimg from "/src/assets/images/products/explosion.png";
 import banner1 from "/src/assets/images/banner/Productbanner.webp";
 import turboimg from "/src/assets/images/products/turbohd.png";
+import dvrimg from "/src/assets/images/products/dvr.webp";
+import accessimg from "/src/assets/images/products/accesscontrol.webp";
+import videointercomimg from "/src/assets/images/products/videointercom.webp";
 import { SEO } from "astro-seo";
 
 // SEO metadata
@@ -86,11 +89,32 @@ const products = [
     link: "/explosionproof"
   },
   {
-    id: 7,
+    id: 5,
     title: "TurboHD",
     description: "TurboHD cameras offer high-quality video surveillance with fast response times.",
     image: turboimg,
     link: "/turbohd"
+  },
+  {
+    id: 6,
+    title: "Access Control",
+    description: "Access control systems manage and control access to secure areas.",
+    image: accessimg,
+    link: "/accesscontrol"
+  },
+  {
+    id: 7,
+    title: "DVR",
+    description: "DVRs provide high-quality video recording and storage for security monitoring.",
+    image: dvrimg,
+    link: "/dvr"
+  },
+  {
+    id: 8,
+    title: "Video Intercom",
+    description: "Video intercom systems provide secure communication and monitoring.",
+    image: videointercomimg,
+    link: "/videointercom"
   }
 ];
 
