--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -77,23 +77,20 @@ const structuredData = [
     }
   },
   {
+    "@context": "https://schema.org",
     "@type": "BreadcrumbList",
     "itemListElement": [
       {
         "@type": "ListItem",
         "position": 1,
-        "item": {
-          "@id": "https://dubai-hikvision.com",
-          "name": "Home"
-        }
+        "name": "Home",
+        "item": "https://dubai-hikvision.com"
       },
       {
         "@type": "ListItem",
         "position": 2,
-        "item": {
-          "@id": "https://dubai-hikvision.com/services",
-          "name": "Services"
-        }
+        "name": "Services",
+        "item": "https://dubai-hikvision.com/services"
       }
     ]
   }
