--- a/src/pages/blogs/[...slug].astro
+++ b/src/pages/blogs/[...slug].astro
@@ -51,16 +51,7 @@ const structuredData = {
     "@type": "Person",
     "name": entry.data.author
   },
-  "publisher": {
-    "@type": "Organization",
-    "name": "Dubai Hikvision",
-    "logo": {
-      "@type": "ImageObject",
-      "url": "https://dubai-hikvision.com/logo.svg",
-      "width": 300,
-      "height": 60
-    }
-  },
+  "publisher": { "@id": "https://dubai-hikvision.com/#organization" },
   "articleBody": entry.data.description
 
 };
