--- a/src/pages/productsnew/index.astro
+++ b/src/pages/productsnew/index.astro
@@ -142,22 +142,12 @@ const structuredData = {
           "priceCurrency": "AED",
           "price": 100, 
           "availability": "https://schema.org/InStock",
-          "seller": {
-            "@type": "Organization",
-            "name": "Dubai Hikvision"
-          }
+          "seller": { "@id": "https://dubai-hikvision.com/#organization" },
         }
       }
     }))
   },
-  "publisher": {
-    "@type": "Organization",
-    "@id": "https://dubai-hikvision.com#organization",
-    "logo": {
-      "@type": "ImageObject",
-      "url": "https://dubai-hikvision.com/logo.svg"
-    }
-  },
+  "publisher": { "@id": "https://dubai-hikvision.com/#organization" },
   "breadcrumb": {
     "@type": "BreadcrumbList",
     "@id": "https://dubai-hikvision.com/#breadcrumb",
