--- a/src/pages/aboutus/index.astro
+++ b/src/pages/aboutus/index.astro
@@ -56,16 +56,7 @@ const structuredData = {
       }
     ],
   },
-  "publisher": {
-    "@type": "Organization",
-    "@id": "https://dubai-hikvision.com#organization",
-    "logo": {
-      "@type": "ImageObject",
-      "url": "https://dubai-hikvision.com/logo.svg",
-      "width": 300,
-      "height": 60
-    }
-  },
+  "publisher": { "@id": "https://dubai-hikvision.com/#organization" },
   "breadcrumb": {
     "@type": "BreadcrumbList",
     "itemListElement": [
