--- a/src/pages/ptzcamera/index.astro
+++ b/src/pages/ptzcamera/index.astro
@@ -19,28 +19,11 @@ const description = `Browse our comprehensive range of PTZ camera products from 
 const ogUrl = "https://dubai-hikvision.com/ptzcamera";
 const structuredData = {
   "@context": "https://schema.org",
-  "@type": "BreadcrumbList",
-  itemListElement: [
-    {
-      "@type": "ListItem",
-      position: 1,
-      name: "Home",
-      item: "https://dubai-hikvision.com",
-    },
-    {
-      "@type": "ListItem",
-      position: 2,
-      name: "Products",
-      item: "https://dubai-hikvision.com/productsnew",
-    },
-    {
-      "@type": "ListItem",
-      position: 3,
-      name: category.charAt(0).toUpperCase() + category.slice(1),
-      item: `https://dubai-hikvision.com/ptzcamera`,
-    },
-  ],
-  mainEntity: {
+  "@type": "CollectionPage",
+  "name": `Hikvision ${category.charAt(0).toUpperCase() + category.slice(1)} Products`,
+  "description": description,
+  "url": ogUrl,
+  "mainEntity": {
     "@type": "ItemList",
     itemListElement: products.map((product, index) => ({
       "@type": "ListItem",
@@ -56,8 +39,30 @@ const structuredData = {
       url: new URL(`/${category}/${product.slug}`, Astro.site).toString(),
     })),
   },
+  "breadcrumb": {
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://dubai-hikvision.com"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Products",
+        "item": "https://dubai-hikvision.com/productsnew"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": category.charAt(0).toUpperCase() + category.slice(1),
+        "item": ogUrl
+      }
+    ]
+  }
 };
-
 const mainColor = "#32869f";
 ---
 
